# WordOfTheDay

./: .env.template  .gitignore  README.md  pyproject.toml  run_word_of_the_day.sh
.github/workflows/: daily-word.yml
wordoftheday/: .gitignore  __init__.py  email_sender.py  etymology_entry.py  scrape_and_print.py  scraping_functions.py  word_entry.py
wordoftheday/files/: wotd_response_clownical.html  wotd_response_niladmirari.html  wotd_response_shrapnel.html  wotd_response_twitchety.html  wotd_response_womanshire.html  wotd_response_† evell.html
wordoftheday/tests/: test_email_sender.py  test_scraping_functions.py  test_word_entry.py
